@@ -29,6 +29,7 @@
 /pm_to_blib
 /t/kalamar_user_client.t
 \#*
+adminToken
 *.tar.gz
 *~
 *.sqlite
