@@ -13,6 +13,7 @@
           (diewald)
         - Add panel types. (diewald)
         - Add textSigle as a plugin receivable information. (diewald)
+        - Introduce start-with-backend command via plugin. (diewald)
 
 0.47 2022-11-22
         - Add command to generate super_client_info file. (diewald)
